ROS2/skinny/log/build_2021-04-18_20-39-21/excavation/stderr.log
  File "/home/team/SoftwareDevelopment/ROS2/skinny/install/excavation/lib/python3.6/site-packages/excavation/excavation_node.py", line 39
    if allDrives[0].serial_number == 206736A1424D:
                                                ^
SyntaxError: invalid syntax

